# agent-taylor

./: .gitignore  README.md  projects.csv  projects.example.csv  pyproject.toml
.beads/: config.yaml  issues.jsonl
src/agent_taylor/: __init__.py  ai_hours.py  batch.py  beads_metrics.py  cli.py  combined.py  compare.py  config_detection.py  git_metrics.py  repo_detection.py
src/git_hist_review/: beads_metrics.py  cli.py  plotting.py
tests/: __init__.py  conftest.py  test_ai_hours.py  test_compare.py  test_config_detection.py  test_productivity.py  test_repo_detection.py  test_sync.py
